--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
 
         <dependency>
             <groupId>org.springframework</groupId>
-            <artifactId>spring-jdbc</artifactId>
+            <artifactId>spring-orm</artifactId>
             <version>5.1.1.RELEASE</version>
         </dependency>
 
@@ -48,6 +48,11 @@
             <version>1.4.197</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
+            <version>5.3.7.Final</version>
+        </dependency>
     </dependencies>
 
     <build>
